--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ google-resumable-media==0.2.3
 googleapis-common-protos==1.5.2
 grpc-google-iam-v1==0.11.4
 grpcio==1.6.0
+gunicorn==19.6.0
 httplib2==0.10.3
 idna==2.6
 monotonic==1.3
@@ -54,6 +55,7 @@ proto-google-cloud-spanner-v1==0.15.3
 protobuf==3.4.0
 pyasn1==0.3.6
 pyasn1-modules==0.1.4
+psycopg2==2.6.2
 PyAudio==0.2.11
 pytz==2017.2
 requests==2.18.4
