--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ proto-google-cloud-spanner-admin-database-v1==0.15.3
 proto-google-cloud-spanner-admin-instance-v1==0.15.3
 proto-google-cloud-spanner-v1==0.15.3
 protobuf==3.4.0
+psycopg2==2.7.3.1
 pyasn1==0.3.6
 pyasn1-modules==0.1.4
 pytz==2017.2
