--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gapic-google-cloud-pubsub-v1==0.15.4
 gapic-google-cloud-spanner-admin-database-v1==0.15.3
 gapic-google-cloud-spanner-admin-instance-v1==0.15.3
 gapic-google-cloud-spanner-v1==0.15.3
+google-api-python-client==1.6.4
 google-auth==1.1.1
 google-cloud==0.27.0
 google-cloud-bigquery==0.26.0
